Copying form across, sorting contact form on tablet

--- a/contact.html
+++ b/contact.html
@@ -259,7 +259,7 @@
                                     <div>
                                         <h2 class="mb-2 pd-card-headline pd-inverted">Send An Enquiry</h2>
                                         <form>
-                                            <div class="align-items-start d-flex flex-column flex-lg-row justify-content-start">
+                                            <div class="align-items-start d-flex flex-column flex-sm-row justify-content-start">
                                                 <div class="mb-2 me-3 pd-forms-5-input-even-width"> 
                                                     <label for="firstName">First Name*</label>                                                     
                                                     <input type="text" class="form-control" id="firstName" placeholder="Your first name" required name="first_name"/> 
@@ -269,7 +269,7 @@
                                                     <input type="text" class="form-control" id="lastName" placeholder="Your last name" required name="last_name"/> 
                                                 </div>
                                             </div>
-                                            <div class="align-items-start d-flex flex-column flex-lg-row justify-content-start">
+                                            <div class="align-items-start d-flex flex-column flex-sm-row justify-content-start">
                                                 <div class="mb-2 me-3 pd-forms-5-input-even-width"> 
                                                     <label for="email">Email address*</label>                                                     
                                                     <input type="email" class="form-control" id="email" placeholder="Email Address" required name="email"/> 
@@ -333,39 +333,35 @@
             </div>
         </section>
         <footer class="pb-4 pd-footer-3 pt-5 text-white">
-            <div class="container">
+            <div class="container position-relative">
                 <div class="pb-4 row">
-                    <div class="col-12 text-center text-lg-start">
-                        <a href="#" name="anchor" class="d-inline-block"><img alt="fort logo logo white" loading="lazy" class="" src="images/design-assets/_vivato/logo-vivato-wo.svg" width="180" height="44"/></a> 
+                    <div class="col-12 text-center text-lg-start"><a href="#" name="anchor" class="d-inline-block pd-footer-3-logo"><img alt="Vivato logo" loading="lazy" src="images/design-assets/_vivato/logo-vivato-wo.svg" width="180" height="44"/></a> 
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 text-center text-lg-start">
-                        <address class="pb-4"> <h3>Drop Us a Line</h3><a href="#" name="anchor" class="pd-icon-card-link"><img src="/images/design-assets/_vivato/mail_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="email icon" width="20" height="20" loading="lazy"><span>hello@vivato.co.uk</span></a><a href="tel:+442071395093" name="anchor" class="pd-icon-card-link"><img src="images/design-assets/_vivato/phone_enabled_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" width="20" height="20" loading="lazy" alt="phone icon"><span>020 7139 5093</span></a> </address> 
+                        <address class="align-items-start d-flex flex-column justify-content-start pb-4"> <h3>Drop Us a Line</h3><a href="#" name="anchor" class="pd-icon-card-link"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                                    <path d="M172.31-180Q142-180 121-201q-21-21-21-51.31v-455.38Q100-738 121-759q21-21 51.31-21h615.38Q818-780 839-759q21 21 21 51.31v455.38Q860-222 839-201q-21 21-51.31 21H172.31ZM480-457.69 160-662.31v410q0 5.39 3.46 8.85t8.85 3.46h615.38q5.39 0 8.85-3.46t3.46-8.85v-410L480-457.69Zm0-62.31 313.85-200h-627.7L480-520ZM160-662.31V-720v467.69q0 5.39 3.46 8.85t8.85 3.46H160v-422.31Z"/>
+                                </svg><span>hello@vivato.co.uk</span></a><a href="tel:+442071395093" name="anchor" class="pd-icon-card-link"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231F20">
+                                    <path d="M182.39-140q-18.17 0-30.28-12T140-182v-129.69q0-14.54 9.58-26t24.73-15.46l111.07-22.62q14.39-2 27.73 1.92 13.35 3.93 22.74 13.7l89.76 90.54q43-24.31 80.08-52.54t70-61.16q33.39-33.15 62.04-69.57 28.66-36.43 50.96-77.27l-92.38-89.93q-8.77-8-12.16-19.77-3.38-11.77-1-28.15l22.93-117.69q3.15-14.54 14.73-24.42 11.58-9.89 26.73-9.89H778q18 0 30 12.11t12 30.28q0 113.07-52.58 226.99-52.58 113.93-148.15 209.7-95.58 95.76-209.69 148.34Q295.46-140 182.39-140Zm534.07-446.92Q735-629 745.35-671.31q10.34-42.3 13.42-83.3 0-2.31-1.54-3.85t-3.85-1.54h-84.92q-3.08 0-5 1.54t-2.69 4.61l-18 89.39q-.77 2.31-.19 5 .57 2.69 2.5 4.23l71.38 68.31Zm-348 344.46-70.61-71.39q-1.93-1.92-3.66-2.5-1.73-.57-4.04.2l-84 17.69q-3.07.77-4.61 2.69-1.54 1.92-1.54 5v84.15q0 2.31 1.54 3.85t3.85 1.54q37.53-1.85 80.42-12.27 42.88-10.42 82.65-28.96Zm348-344.46Zm-348 344.46Z"/>
+                                </svg><span>020 7139 5093</span></a> </address> 
                     </div>
                     <div class="col-lg-3 text-center text-lg-start">
                         <h3>Services</h3>
-                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4"><a href="#" name="anchor" class="pd-footer-link">Strategic Consultancy</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Software Development</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Support and Hosting</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Business Analysis</a>
+                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4">
+                            <a href="#" name="anchor" class="pd-footer-link">Strategic Consultancy</a><a href="#" name="anchor" class="pd-footer-link">Software Development</a><a href="#" name="anchor" class="pd-footer-link">Support and Hosting</a><a href="#" name="anchor" class="pd-footer-link">Business Analysis</a>
                         </div>                         
                     </div>
                     <div class="col-lg-3 text-center text-lg-start">
                         <h3>Popular</h3>
-                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4"><a href="#" name="anchor" class="pd-footer-link">About Vivato</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Our Approach</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Our Work</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Insights - News</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Insights - Video</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Careers</a>
+                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4">
+                            <a href="#" name="anchor" class="pd-footer-link">About Vivato</a><a href="#" name="anchor" class="pd-footer-link">Our Approach</a><a href="#" name="anchor" class="pd-footer-link">Our Work</a><a href="#" name="anchor" class="pd-footer-link">Insights - News</a><a href="#" name="anchor" class="pd-footer-link">Insights - Video</a><a href="#" name="anchor" class="pd-footer-link">Careers</a>
                         </div>                         
                     </div>
                     <div class="col-lg-3 text-center text-lg-start">
                         <h3>Latest Insights</h3>
-                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4"><a href="#" name="anchor" class="pd-footer-link">The Cloud-Hosted ERP Systems Revolution: Enhancing Hybrid Working Models for Modern Businesses</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Still thinking about the Roman Empire? Here&apos;s how business owners can embrace technology like an Emperor.</a>
-                            <a href="#" name="anchor" class="pd-footer-link">Making You Business Tools Work Together: The Simple Advantage</a>
+                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4">
+                            <a href="#" name="anchor" class="pd-footer-link">The Cloud-Hosted ERP Systems Revolution: Enhancing Hybrid Working Models for Modern Businesses</a><a href="#" name="anchor" class="pd-footer-link">Still thinking about the Roman Empire? Here&apos;s how business owners can embrace technology like an Emperor.</a><a href="#" name="anchor" class="pd-footer-link">Making You Business Tools Work Together: The Simple Advantage</a>
                         </div>                         
                     </div>
                 </div>
@@ -381,26 +377,30 @@
                 </div>
                 <div class="mb-4 row">
                     <div class="col-md-4">
-                        <address class="pd-footer-3-card text-center text-md-start"> <div class="align-items-md-start align-items-start d-flex flex-row justify-content-center justify-content-lg-start justify-content-md-start">
-                                <span><img src="images/design-assets/_vivato/location_on_24dp_25215F_FILL0_wght300_GRAD0_opsz24.svg" alt="location icon" width="24" height="24" loading="lazy" class="me-1"></span>
+                        <address class="pd-footer-3-card text-center text-md-start"> <div class="align-items-md-start align-items-start d-flex flex-row justify-content-center justify-content-lg-start justify-content-md-start"><span><img src="images/design-assets/_vivato/location_on_24dp_25215F_FILL0_wght300_GRAD0_opsz24.svg" alt="location icon" width="24" height="24" loading="lazy" class="me-1"></span>
                                 <h4>London</h4>
-                            </div> <p>2 Stephen Street</p> <p>London</p> <p>W1T 1AN</p> <footer class="mt-2"><a href="#" name="anchor" class="pd-btn">Directions<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                            </div> <p>2 Stephen Street</p> <p>London</p> <p>W1T 1AN</p> <footer class="mt-2">
+                                <a href="#" name="anchor" class="pd-btn">Directions<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
                                             <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
                                         </svg></span></a>
                             </footer> </address> 
                     </div>
                     <div class="col-md-4">
-                        <address class="pd-footer-3-card text-center text-md-start"> <div class="align-items-md-start align-items-start d-flex flex-row justify-content-center justify-content-md-start"><span><img src="images/design-assets/_vivato/location_on_24dp_25215F_FILL0_wght300_GRAD0_opsz24.svg" alt="location icon" width="24" height="24" loading="lazy" class="me-1"></span>
+                        <address class="pd-footer-3-card text-center text-md-start"> <div class="align-items-md-start align-items-start d-flex flex-row justify-content-center justify-content-md-start">
+                                <span><img src="images/design-assets/_vivato/location_on_24dp_25215F_FILL0_wght300_GRAD0_opsz24.svg" alt="location icon" width="24" height="24" loading="lazy" class="me-1"></span>
                                 <h4>Sheffield</h4>
-                            </div> <p>32 Eyre Street</p> <p>Sheffield</p> <p>S1 4QZ</p> <footer class="mt-2"><a href="#" name="anchor" class="pd-btn">Directions<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                            </div> <p>32 Eyre Street</p> <p>Sheffield</p> <p>S1 4QZ</p> <footer class="mt-2">
+                                <a href="#" name="anchor" class="pd-btn">Directions<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
                                             <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
                                         </svg></span></a>
                             </footer> </address> 
                     </div>
                     <div class="col-md-4">
-                        <address class="pd-footer-3-card text-center text-md-start"> <div class="align-items-md-start align-items-start d-flex flex-row justify-content-center justify-content-md-start"><span><img src="images/design-assets/_vivato/location_on_24dp_25215F_FILL0_wght300_GRAD0_opsz24.svg" alt="location icon" width="24" height="24" loading="lazy" class="me-1"></span>
+                        <address class="pd-footer-3-card text-center text-md-start"> <div class="align-items-md-start align-items-start d-flex flex-row justify-content-center justify-content-md-start">
+                                <span><img src="images/design-assets/_vivato/location_on_24dp_25215F_FILL0_wght300_GRAD0_opsz24.svg" alt="location icon" width="24" height="24" loading="lazy" class="me-1"></span>
                                 <h4>Hull</h4>
-                            </div> <p>60 Bond Street</p> <p>Hull</p> <p>HU1 3EN</p> <footer class="mt-2"><a href="#" name="anchor" class="pd-btn">Directions<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                            </div> <p>60 Bond Street</p> <p>Hull</p> <p>HU1 3EN</p> <footer class="mt-2">
+                                <a href="#" name="anchor" class="pd-btn">Directions<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
                                             <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
                                         </svg></span></a>
                             </footer> </address> 
@@ -414,17 +414,12 @@
                 <div class="pd-accred-row row">
                     <div class="col-lg-6 pb-4 text-center text-lg-start">
                         <h3>Accredited</h3>
-                        <div class="align-items-center align-items-md-start d-flex flex-column flex-md-row justify-content-lg-start justify-content-md-center justify-content-start pt-2">
-                            <a href="#" name="anchor" class="d-inline-block mb-4 me-md-3 "><img src="images/design-assets/_vivato/logo-microsoft.svg" alt="nhs logo" loading="lazy" class="pd-accred-logo" height="65" width="145"></a>
-                            <a href="#" name="anchor" class="d-inline-block mb-4"><img loading="lazy" class="pd-accred-logo" src="images/design-assets/_vivato/logo-cyberEssentials-wo.svg" alt="cyber essentials logo" width="162" height="60"></a>
+                        <div class="align-items-center align-items-md-start d-flex flex-column flex-md-row justify-content-lg-start justify-content-md-center justify-content-start pt-2"><a href="#" name="anchor" class="d-inline-block mb-4 me-md-3 pd-footer-3-logo"><img src="images/design-assets/_vivato/logo-microsoft.svg" alt="nhs logo" loading="lazy" class="pd-accred-logo" height="65" width="145"></a><a href="#" name="anchor" class="d-inline-block mb-4 pd-footer-3-logo"><img loading="lazy" class="pd-accred-logo" src="images/design-assets/_vivato/logo-cyberEssentials-wo.svg" alt="cyber essentials logo" width="162" height="60"></a>
                         </div>                         
                     </div>
                     <div class="col-lg-6 pb-4 text-center text-lg-start">
                         <h3>Social</h3>
-                        <div class="pt-2">
-                            <a href="#" name="anchor" class="d-inline-block pd-social-logo"><img src="images/design-assets/icon-facebook.svg" alt="facebook icon" width="40" height="40" loading="lazy"></a>
-                            <a href="#" name="anchor" class="d-inline-block pd-social-logo"><img alt="LinkedIn icon" width="40" height="40" loading="lazy" src="images/design-assets/icon-linkedin.svg"></a>
-                            <a href="#" name="anchor" class="d-inline-block pd-social-logo"><img alt="facebook icon" width="40" height="40" loading="lazy" src="images/design-assets/icon-instagram.svg"></a>
+                        <div class="pt-2"><a href="#" name="anchor" class="d-inline-block pd-social-logo"><img src="images/design-assets/icon-facebook.svg" alt="facebook icon" width="40" height="40" loading="lazy"></a><a href="#" name="anchor" class="d-inline-block pd-social-logo"><img alt="LinkedIn icon" width="40" height="40" loading="lazy" src="images/design-assets/icon-linkedin.svg"></a><a href="#" name="anchor" class="d-inline-block pd-social-logo"><img alt="facebook icon" width="40" height="40" loading="lazy" src="images/design-assets/icon-instagram.svg"></a>
                         </div>                         
                     </div>
                 </div>
@@ -436,9 +431,7 @@
                 <div class="row">
                     <div class="col-lg-6 pb-4 pb-md-0 text-center text-lg-start"> 
 </div>
-                    <div class="col-lg-6 text-center text-lg-end">
-                        <a href="#" class="me-2  pd-footer-link">Privacy Policy</a>
-                        <a href="#" class="pd-footer-link">Terms of Use</a> 
+                    <div class="col-lg-6 text-center text-lg-end"><a href="#" class="me-2  pd-footer-link">Privacy Policy</a><a href="#" class="pd-footer-link">Terms of Use</a> 
                     </div>
                 </div>
             </div>
